google maps screen shows maps and ask user for location permissions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="e_mail">Email</string>
     <string name="login">Login</string>
     <string name="password">Password</string>
+    <string name="map_key" translatable="false">AIzaSyBmDVbSqDq9kQkIZe_c9N7FWhDTDVh-hiM</string>
 </resources>
