Login screen: Final.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_activity_tabbed">TabbedActivity</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
-    <string name="tag">Join us and \nOrder from your favorite food trucks.</string>
+    <string name="tag">Find your Food.</string>
     <string name="e_mail">Email</string>
     <string name="login">Login</string>
     <string name="password">Password</string>
