--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,11 @@
     <string name="action_settings">Settings</string>
     <string name="privacy">CurbSide is licensed to You (End-User) by CurbSide, located at 1075 North Jordan Ave, Bloomington, Indiana 47406, United States (hereinafter: Licensor), for use only under the terms of this License Agreement.
 
-By downloading the Application from the Apple AppStore, and any update thereto (as permitted by this License Agreement), You indicate that You agree to be bound by all of the terms and conditions of this License Agreement, and that You accept this License Agreement.
+By downloading the Application from the Google Play Store, and any update thereto (as permitted by this License Agreement), You indicate that You agree to be bound by all of the terms and conditions of this License Agreement, and that You accept this License Agreement.
 
-The parties of this License Agreement acknowledge that Apple is not a Party to this License Agreement and is not bound by any provisions or obligations with regard to the Application, such as warranty, liability, maintenance and support thereof. CurbSide, not Apple, is solely responsible for the licensed Application and the content thereof.
+The parties of this License Agreement acknowledge that Google is not a Party to this License Agreement and is not bound by any provisions or obligations with regard to the Application, such as warranty, liability, maintenance and support thereof. CurbSide, not Google, is solely responsible for the licensed Application and the content thereof.
 
-This License Agreement may not provide for usage rules for the Application that are in conflict with the latest App Store Terms of Service. CurbSide acknowledges that it had the opportunity to review said terms and this License Agreement is not conflicting with them.
+This License Agreement may not provide for usage rules for the Application that are in conflict with the latest Play Store Terms of Service. CurbSide acknowledges that it had the opportunity to review said terms and this License Agreement is not conflicting with them.
 
 All rights not expressly granted to You are reserved.</string>
 </resources>
